--- a/dalston_service/src/main/resources/application.properties
+++ b/dalston_service/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-spring.application.name=consul-client
+spring.application.name=service
 server.port=2001
-
-spring.cloud.consul.host=localhost
-spring.cloud.consul.port=8500
+eureka.client.serviceUrl.defaultZone=http://localhost:1001/eureka/
