--- a/dalston_consumer/src/main/resources/application.properties
+++ b/dalston_consumer/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.application.name=consumer
+spring.application.name=eureka-consumer
 server.port=2101
 
 eureka.client.serviceUrl.defaultZone=http://localhost:1001/eureka/
+
+logging.file=${spring.application.name}.log
